# dagger

./: .gitignore  Cargo.toml  IMPROVEMENTS_SUMMARY.md  MIGRATION_SUMMARY.md  PubSub.md  README.md  WORKFLOW_SPEC_MIGRATION.md  run_tests.sh  temp.txt  test-task-core.rs  test_coord_fix.yaml  test_sequential.yaml
.cursor/rules/: project.mdc
dagger-macros/: Cargo.toml
dagger-macros/src/: lib.rs
docs/: ARCHITECTURE.md  COMPLETE_API_REFERENCE.md  DAG_FLOW_COMPLETE_GUIDE.md  DAG_FLOW_IMPLEMENTATION.md  DAG_FLOW_IMPLEMENTATION_GUIDE.md  MIGRATION_QUICKFIX.md  PUBSUB_ARCHITECTURE.md  QUICK_REFERENCE.md  README.md  README_DAG_FLOW_SECTION.md  SQLITE_DAG_STORAGE_GUIDE.md  TASK_AGENT_ARCHITECTURE.md  TASK_AGENT_ARCHITECTURE_REVIEW.md
docs/archive/: DAG_FLOW_ARCHITECTURE.md
docs/archive/migrations/: ASYNC_MIGRATION_GUIDE.md  COORDINATOR_IMPLEMENTATION_SUMMARY.md  SQLITE_MIGRATION_CONTEXT.md  SUPERVISOR_HOOKS_CHALLENGE.md  SUPERVISOR_HOOKS_SUMMARY.md
example/: Cargo.toml  pipeline.yaml
example/dags/: infolder.yaml
example/src/: main.rs
examples/: comprehensive_builder_example.rs  coordinator_demo.rs  dynamic_dag.yaml  dynamic_nodes_demo.rs  hooks_solution_simple.rs  integrated_system_example.rs  supervisor_hooks_refactored.rs  task-core-demo.md  test_dag_simple.rs  test_enhancements.rs  test_fixed_dag.rs  test_multi_node.rs  test_ops_db.rs  test_ops_db_file.rs
examples/agent_flow/: Cargo.toml
examples/agent_flow/src/: main.rs  supervisor.rs
examples/agent_simple/: Cargo.toml
examples/agent_simple/dagger_db/: db  snap.000000000000653D
examples/agent_simple/src/: main.rs
examples/dag_flow/: Cargo.toml  README.md  pipeline.yaml  pipeline_parallel.yaml  test_doc_example.rs
examples/dag_flow/dagger_db/: db  snap.000000000000236E
examples/dag_flow/src/: main.rs  test_parallel.rs
examples/dag_flow/src/taskagent/task-core/: Cargo.toml
examples/dag_flow/src/taskagent/task-core/src/: config.rs  error.rs  executor.rs  lib.rs  metrics.rs  model.rs  ready_queue.rs  recovery.rs  scheduler.rs  storage.rs  util.rs
examples/deepresearch/: Cargo.toml  README.md
examples/deepresearch/src/: lib.rs  main.rs
examples/deepresearch/src/agents/: evaluation.rs  mod.rs  planning.rs  reader.rs  reasoning.rs  report.rs  search.rs  supervisor.rs
examples/deepresearch/src/utils/: llm.rs  memory.rs  mod.rs  search.rs  similarity.rs
examples/pubsubagent_basic/: Cargo.toml
examples/pubsubagent_basic/src/: main.rs
examples/simple_task/: Cargo.toml
examples/simple_task/src/: main.rs
examples/task-core-hello/: Cargo.toml
examples/task-core-hello/src/: main.rs
examples/task-core-workflow/: Cargo.toml
examples/task-core-workflow/src/: main.rs
examples/taskmanager/: Cargo.toml
examples/taskmanager/example_state.db/: db  snap.0000000000000CE0
examples/taskmanager_deepsearch/: .env  .env_example  Cargo.toml
examples/taskmanager_deepsearch/src/: main copy.rs  main.rs
examples/taskmanager_deepsearch/src/examples/: llm_example.rs  mod.rs  template_example.rs
examples/taskmanager_deepsearch/src/utils/: mod.rs
examples/taskmanager_deepsearch/src/utils/llm/: README.md  chat_stream.rs  client.rs  mod.rs  structured_outputs.rs  tool_call.rs
examples/taskmanager_deepsearch/src/utils/prompts/: mod.rs  prompts.yaml
examples/taskmanager_new/: Cargo.toml
examples/taskmanager_new/src/: main.rs
examples/taskmanager_toy/: Cargo.toml
examples/taskmanager_toy/src/: main.rs
examples/workflow_example/src/: main.rs
src/: any.rs  dag_flow.rs  lib copy.rs  lib.rs  pubsubagent.rs  registry.rs
src/coord/: action.rs  coordinator.rs  hooks.rs  legacy_bridge.rs  mod.rs  registry.rs  types.rs
src/core/: errors.rs  limits.rs  memory.rs  mod.rs
src/core_unused/: builders.rs  concurrency.rs  monitoring.rs  performance.rs
src/dag_flow/: any.rs  branch.rs  dag_builder.rs  dag_flow.rs  dag_flow_parallel.rs  enhanced_dag_flow.rs  events.rs  function_action.rs  legacy_compat.rs  mod.rs  planning.rs  sqlite_cache.rs  supervisor.rs
src/pubsub/: enhanced_pubsub.rs  mod.rs  pubsub.rs  pubsub_builder.rs
src/storage/: mod.rs  schema.sql  sqlite_storage.rs
src/taskagent/: README.md  builder.rs  enhanced_taskagent.rs  errors.rs  mod.rs  registry.rs  taskagent.rs  taskagent_builder.rs
src/taskagent/task-core/: Cargo.toml  README.md
src/taskagent/task-core/examples/: Cargo.toml  executor_demo.rs  recovery_demo.rs
src/taskagent/task-core/src/: config.rs  error.rs  executor.rs  lib.rs  metrics.rs  mod.rs  model.rs  ready_queue.rs  recovery.rs  scheduler.rs  sqlite_storage.rs  storage.rs  util.rs
tests/: README.md  integration_runner.rs  test_dag_flow.rs  test_dag_flow_simple.rs  test_task_core.rs  test_task_core_simple.rs
