[package]
name = "dagger-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.98", features = ["full", "extra-traits"] }
proc-macro2 = "1.0.93"
proc-macro-error = "1.0.4"
quote = "1.0.38"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.105"
async-trait = "0.1.86"
jsonschema = "0.29.0"
