[package]
name = "rust_dags"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
petgraph = "0.6.4"
tokio = { version = "1.36", features = ["rt", "sync", "rt-multi-thread", "time"] }
lazy_static = "1.4.0"
anyhow = { version = "1.0" }
async-openai = "0.19.1"
mistralai-client = "0.8.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3.30"
reqwest = "0.11.26"
async-trait = "0.1.77"
dagger = {path = "../"}
