[package]
name = "agent_flow"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
petgraph = "0.7.1"
tokio = { version = "1.36", features = ["rt", "sync", "rt-multi-thread", "time"] }
lazy_static = "1.4.0"
anyhow = { version = "1.0.95" }
tracing = "0.1.40"
tracing-subscriber = "0.3"
futures = "0.3.31"
async-trait = "0.1.77"
dagger = { git = "https://github.com/srv1n/dagger" }
rzn_datasourcer = {path = "../../../rzn_datasourcer"}
async-openai = "0.27.2"
reqwest = { version = "0.12", features = ["json"] }  # Optional fallback, not used here
serde_json = "1.0"
chrono = "0.4"