[package]
name = "agent_simple"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { version = "1.36", features = ["rt", "sync", "rt-multi-thread", "time"] }

anyhow = { version = "1.0.95" }
tracing = "0.1.40"
tracing-subscriber = "0.3"
async-trait = "0.1.77"

dagger = {path = "../../"}
sled = "0.34.7"