[package]
name = "deepresearch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
dagger = { path = "../../" }
dagger-macros = { path = "../../dagger-macros" }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
async-trait = "0.1.86"
jsonschema = "0.16.1"
serde = { version = "1.0", features = ["derive"] }
surrealdb = { version = "2.2.1", features = ["kv-mem"] }

[workspace]
