[package]
name = "pubsubagent_basic"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["rt", "sync", "rt-multi-thread", "time", "macros"] }
anyhow = { version = "1.0.95" }
tracing = "0.1.40"
tracing-subscriber = "0.3"
async-trait = "0.1.77"
jsonschema = "0.16.1"
dagger = {path = "../../"}
dagger-macros = { path = "../../dagger-macros" }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "json", "chrono"] }
serde_json = "1.0.120"
chrono = "0.4"
futures = "0.3"
fastrand = "2.0"

[workspace]