[package]
name = "task-core-workflow"
version = "0.1.0"
edition = "2021"

[dependencies]
task-core = { path = "../../src/taskagent/task-core" }
dagger-macros = { path = "../../dagger-macros" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }