[package]
name = "taskmanager"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["rt", "sync", "rt-multi-thread", "time"] }
anyhow = { version = "1.0.95" }
tracing = "0.1.40"
tracing-subscriber = "0.3"
async-trait = "0.1.77"
jsonschema = "0.16.1"
dagger = {path = "../../"}
dagger-macros = { path = "../../dagger-macros" }
sled = "0.34.7"
serde_json = "1.0.120"
chrono = "0.4"
linkme = "0.3"
schemars = "0.8.21"
async-openai = "0.28.0"
rzn_datasourcer = { path = "../../../rzn_datasourcer" }
futures = "0.3"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "=1.4.0"
dotenv = "0.15.0"
new_string_template = "1.5.3"
serde_yaml = "0.9.34"
chrono-tz = "0.10.1"
regex = "1.11.1"


[workspace]