[package]
name = "taskmanager_new"
version = "0.1.0"
edition = "2021"

[dependencies]
dagger = { path = "../.." }
dagger_macros = { path = "../../macros" }
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
anyhow = "1.0.71"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
chrono = "0.4.26" 