[package]
name = "task-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bincode = "1.3"
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
crossbeam = "0.8"
dashmap = "5.5"
linkme = "0.3"
num_cpus = "1.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.11"
sled = "0.34"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tempfile = "3.0"  # For tests
tokio = { version = "1.38", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
jsonschema = "0.29"

[dependencies.dagger]
path = "../../../"
version = "0.0.1"

[dev-dependencies]
tokio = { version = "1.38", features = ["full"] }