[package]
name = "executor_demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "executor_demo"
path = "executor_demo.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
serde_json = "1.0"
tempfile = "3.0"
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"

[dependencies.task-core]
path = "../"

[dependencies.dagger]
path = "../../../../"