[package]
name = "task-core"
version = "0.1.0"
edition = "2021"

[dependencies]
sled = "0.34"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
dashmap = "5"
crossbeam = "0.8"
serde = { version = "1", features = ["derive"] }
bincode = "1"
bytes = "1"
thiserror = "1"
tracing = "0.1"
num_cpus = "1"
smallvec = "1"